# ApplicationLayerExample

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
test/: CMakeLists.txt  test_myclass.cpp
